--- a/final-project.rmd
+++ b/final-project.rmd
@@ -120,11 +120,25 @@ names(avg_data_2020)[names(avg_data_2020) == "2020 [YR2020]"] <- "gdp_2020_value
 ```
 
 
-```{r compare_variables}
-ggplot( avg_data_2020, aes(x = gdp_2020_values)) + 
+```{r compare_variables 2020}
+
+#removing missing values
+df2<-avg_data_2020[!(avg_data_2020$gdp_2020_values==".."),]
+view(df2)
+
+df3<-df2 %>% filter(!is.na(df2$gdp_2020_values))
+View(df3)
+
+#sentiment scores
+ggplot(data = df3, aes(x = avg_score_2020)) + 
   geom_histogram()
 
-ggplot(data = avg_data_2020, aes(x = avg_score_2020 , y = gdp_2020_values))+ 
+#gdp values
+ggplot(df3, aes(x = region, y = gdp_2020_values )) +  
+  geom_bar(stat = "identity")
+
+#comparing both the variables
+ggplot(data = df3, aes(x = gdp_2020_values , y = avg_score_2020))+ 
   geom_point() + 
   geom_smooth()
 ```
