--- a/final-project.rmd
+++ b/final-project.rmd
@@ -90,7 +90,7 @@ View(mapdata1)
 
 map1<-ggplot(mapdata1, aes( x = long, y = lat, group=group)) +
   geom_polygon(aes(fill = avg_score_2020), color = "black")
-map1
+
 
 map2 <- map1 + scale_fill_gradient(name = "avg score", low = "light blue", high =  "black", na.value = "grey50")+
   theme(axis.text.x = element_blank(),
@@ -154,6 +154,12 @@ ggplot(df3, aes(x = region, y = gdp_2020_values )) +
 ggplot(data = df3, aes(x = gdp_2020_values , y = avg_score_2020))+ 
   geom_point() + 
   geom_smooth()
+```
+```{r regression}
+
+library(brms)
+dv <- brm(formula = gdp_2020_values~avg_score_2020, data=df3, family=gaussian ,refresh=0)
+
 ```
 
 
