--- a/final-project.rmd
+++ b/final-project.rmd
@@ -35,6 +35,8 @@ view(data_2021)
 
 ```{r comparision 2020 and 2021}
 
+#2020
+
 data_2020$DATE=as.Date(data_2020$DATE)
 
 data_2020$Month <- months(data_2020$DATE)
@@ -49,8 +51,8 @@ monthly2020=data_2020 %>%
 
 monthly2020$Month=factor(monthly2020$Month, levels = month.name)
 
-monthly2020
 
+#2021
 
 data_2021$DATE=as.Date(data_2021$DATE)
 
@@ -66,7 +68,7 @@ monthly2021=data_2021 %>%
 
 monthly2021$Month=factor(monthly2021$Month, levels = month.name)
 
-monthly2021
+
 
 monthly <- rbind(monthly2020,monthly2021)
 
@@ -165,9 +167,6 @@ gdp_2020 <- read_csv("gdp_2020.csv")
 
 gdp_2021 <- read_csv("gdp_2021.csv")
 
-view(gdp_2020)
-view(gdp_2021)
-
 gdp_2020 <- gdp_2020[c(1,5)]
 gdp_2021 <- gdp_2021[c(1,5)]
 
@@ -184,18 +183,17 @@ names(data_2021)[names(data_2021) == "NAME_0"] <- "region"
 data_2020 <- left_join(data_2020, gdp_2020, by="region")
 data_2021 <- left_join(data_2021, gdp_2021, by="region")
 
-view(data_2020)
-view(data_2021)
-
 data_total <- rbind(data_2020,data_2021)
-view(data_total)
+#view(data_total)
+
+sentiment_data <- data_total
 
 ```
 
 
 
 
-```{r compare_variables 2020 DAILY}
+```{r compare_variables}
 
 #removing missing values
 data_total<-data_total[!(data_total$gdp==".."),]
@@ -206,20 +204,15 @@ data_total$gdp = (data_total$gdp) / 10000000000000
 
 data_total<-data_total %>% filter(!is.na(data_total$gdp))
 
-view(data_total)
-
-#sentiment scores
-ggplot(data = data_total, aes(x = SCORE)) + 
-  geom_histogram()
-
-#gdp values
-ggplot(data_total ,aes(x = region, y = gdp )) +  
-  geom_bar(stat = "identity")
-
 #comparing both the variables
-ggplot(data = data_total, aes(x = gdp , y = SCORE))+ 
+lgdp=log(data_total$gdp)
+ggplot(data = data_total, aes(x = lgdp , y = SCORE))+ 
   geom_point() + 
-  geom_smooth()
+  geom_smooth(method = "lm")
+
+attach(data_total)
+m1=lm(SCORE~gdp)
+summary(m1)
 ```
 ```{r regression1 DAILY}
 
@@ -268,6 +261,7 @@ ggplot(data = df, aes(x = users , y = SCORE))+
   geom_smooth()
 
 ```
+
 ```{r regression2}
 
 library(brms)
@@ -308,5 +302,58 @@ posterior::summarize_draws(draws_fit)
 conditional_effects(dv4)
 ```
 
+```{r load and clean average hours}
+average_hours <- read.csv("average_hours.csv")
 
+
+average_hours <- average_hours[c(1,3,4,76,77)]
+average_hours<-average_hours %>%  filter(!row_number() %in% c(1, 2, 3))
+average_hours <- dplyr::filter(average_hours, X.2 %in% c("Average Hours Worked"))
+average_hours <- average_hours[c(2,4,5)]
+names(average_hours)[names(average_hours) == "X.1"] <- "region"
+names(average_hours)[names(average_hours) == "X.74"] <- "averageHours"
+names(average_hours)[names(average_hours) == "X.75"] <- "averageHours"
+view(average_hours)
+
+avg20 <- average_hours[c(1,2)]
+avg21 <- average_hours[c(1,3)]
+
+avg20['Year'] = '20'
+avg21['Year'] = '21'
+
+```
+
+```{r comparing hours and sentiment scores}
+
+avg_20 <- dplyr::filter(data_total, Year %in% c("20"))
+avg_21 <- dplyr::filter(data_total, Year %in% c("21"))
+
+avg_20 <- left_join(avg_20, avg20, by=c("region","Year"))
+avg_21 <- left_join(avg_21, avg21, by=c("region","Year"))
+
+data_total <- rbind(avg_20,avg_21)
+
+data_total<- data_total %>% filter(!is.na(data_total$averageHours))
+
+data_total$averageHours <- as.numeric(gsub(",","",data_total$averageHours))
+
+data_total$averageHours <- data_total$averageHours/1000
+
+ggplot(data = data_total, aes(x = averageHours , y = SCORE))+ 
+  geom_point() + 
+  geom_smooth()
+
+```
+```{r regression5}
+dv5 <- brm(formula = SCORE~averageHours, data=data_total, family=gaussian ,refresh=0)
+```
+
+```{r plot_reg_coefs5}
+draws_fit <- as_draws_df(dv5)
+posterior::summarize_draws(draws_fit)
+```
+
+```{r cond_eff_coefs5}
+conditional_effects(dv5)
+```
 
